--- a/package.json
+++ b/package.json
@@ -20,12 +20,11 @@
   },
   "devDependencies": {
     "lodash": "^4.11.1",
-    "trails": "latest",
     "eslint": "^2.4",
-    "eslint-config-trails": "^1.0.4",
+    "eslint-config-trails": "^2",
     "mocha": "^2.4.5",
-    "smokesignals": "^1.0.9",
-    "trailpack-core": "^1.0.0-beta-6"
+    "smokesignals": "v2-latest",
+    "trails": "v2-atest"
   },
   "scripts": {
     "test": "eslint . && mocha"
@@ -37,5 +36,5 @@
     "extends": "trails"
   },
   "repository": "git@github.com:CaliStyle/trailpack-proxy-cart.git",
-  "license": "Apache-2.0"
+  "license": "MIT"
 }
