--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint-config-trails": "^2",
     "mocha": "^2.4.5",
     "smokesignals": "v2-latest",
-    "trails": "v2-atest"
+    "trails": "v2-latest"
   },
   "scripts": {
     "test": "eslint . && mocha"
