--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "trailjs"
   ],
   "dependencies": {
-    "trailpack": "latest"
+    "trailpack": "v2-latest"
   },
   "devDependencies": {
     "lodash": "^4.11.1",
