--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "trailjs"
   ],
   "dependencies": {
+    "babyparse": "^0.4.6",
     "sharp": "^0.17.0",
     "trailpack": "v2-latest",
     "trailpack-proxy-generics": "0.0.0"
