--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "babyparse": "^0.4.6",
+    "remove-markdown": "^0.1.0",
     "sharp": "^0.17.0",
     "trailpack": "v2-latest",
     "trailpack-proxy-generics": "0.0.0"
