--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babyparse": "^0.4.6",
     "remove-markdown": "^0.1.0",
     "sharp": "^0.17.0",
+    "striptags": "^2.1.1",
     "trailpack": "v2-latest",
     "trailpack-proxy-generics": "0.0.0"
   },
