--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   ],
   "dependencies": {
     "babyparse": "^0.4.6",
+    "proxy-engine-errors": "^1.0.0",
+    "proxy-engine-helpers": "^1.0.1",
     "remove-markdown": "^0.1.0",
     "sharp": "^0.17.0",
     "striptags": "^2.1.1",
