--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "babyparse": "^0.4.6",
+    "joi": "^9.0.4",
     "proxy-engine-errors": "^1.0.0",
     "proxy-engine-helpers": "^1.0.1",
     "remove-markdown": "^0.1.0",
