--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "babyparse": "^0.4.6",
     "joi": "^9.0.4",
+    "multer": "^1.2.1",
     "proxy-engine-errors": "^1.0.1",
     "proxy-engine-helpers": "^1.0.1",
     "remove-markdown": "^0.1.0",
