PE-7 Start Product Upload into TEMP DB

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "proxy-engine-helpers": "^1.0.1",
     "remove-markdown": "^0.1.0",
     "sharp": "^0.17.0",
+    "shortid": "^2.2.6",
+    "sqlite3": "^3.1.4",
     "striptags": "^2.1.1",
     "trailpack": "v2-latest",
     "trailpack-proxy-generics": "0.0.0"
@@ -36,10 +38,9 @@
     "mocha": "^2.4.5",
     "sails-disk": "^0.10.10",
     "smokesignals": "v2-latest",
-    "sqlite3": "^3.1.4",
     "supertest": "^2.0.1",
     "trailpack-express": "^2.0.0-rc1",
-    "trailpack-proxy-engine": "latest",
+    "trailpack-proxy-engine": "^0.0.3",
     "trailpack-sequelize": "^1.1.1",
     "trailpack-router": "v2-latest",
     "trailpack-proxy-permissions": "^0.0.1",
