--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sqlite3": "^3.1.4",
     "striptags": "^2.1.1",
     "trailpack": "v2-latest",
+    "trailpack-proxy-cart-countries": "0.0.0",
     "trailpack-proxy-generics": "0.0.0"
   },
   "devDependencies": {
