--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "sqlite3": "^3.1.4",
     "striptags": "^2.1.1",
     "trailpack": "v2-latest",
-    "trailpack-proxy-cart-countries": "0.0.0",
-    "trailpack-proxy-generics": "0.0.0"
+    "trailpack-proxy-cart-countries": "^0.0.2",
+    "trailpack-proxy-generics": "^0.0.0"
   },
   "devDependencies": {
     "eslint": "^2.4",
