--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "babyparse": "^0.4.6",
+    "geolib": "^2.0.22",
     "joi": "^9.0.4",
     "multer": "^1.2.1",
     "proxy-engine-errors": "^1.0.1",
