--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "trailpack-proxy-cart",
   "version": "0.0.5",
   "description": "Cart - Trailpack for Proxy Engine",
-  "homepage": "http://trailsjs.io",
+  "homepage": "https://cali-style.com",
   "author": {
     "name": "scott-wyatt",
     "email": "scottwyatt86@gmail.com",
