--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babyparse": "^0.4.6",
     "geolib": "^2.0.22",
     "joi": "^10.2.2",
+    "markdown-it": "^8.3.0",
     "multer": "^1.2.1",
     "proxy-engine-errors": "^1.0.1",
     "proxy-engine-helpers": "^1.0.1",
@@ -30,7 +31,7 @@
     "striptags": "^3.0.1",
     "trailpack": "v2-latest",
     "trailpack-proxy-cart-countries": "^0.0.3",
-    "trailpack-proxy-generics": "^0.0.18"
+    "trailpack-proxy-generics": "^0.0.21"
   },
   "devDependencies": {
     "eslint": "^3.0.0",
@@ -39,14 +40,14 @@
     "lodash": "^4.11.1",
     "mocha": "^2.4.5",
     "sails-disk": "^0.10.10",
-    "smokesignals": "v2-latest",
+    "smokesignals": "^2.0.0",
     "supertest": "^2.0.1",
     "trailpack-express": "^2.0.3",
     "trailpack-proxy-engine": "^0.0.10",
     "trailpack-sequelize": "^2.0.0",
-    "trailpack-router": "v2-latest",
+    "trailpack-router": "^2.0.0",
     "trailpack-proxy-permissions": "^0.0.3",
-    "trails": "v2-latest"
+    "trails": "^2.0.0"
   },
   "scripts": {
     "test": "eslint --fix . && mocha"
