--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trailpack-proxy-cart",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "Cart - Trailpack for Proxy Engine",
   "homepage": "https://cali-style.com",
   "author": {
@@ -21,6 +21,7 @@
     "geolib": "^2.0.22",
     "joi": "^10.2.2",
     "markdown-it": "^8.3.0",
+    "markdown-it-meta": "0.0.1",
     "multer": "^1.2.1",
     "proxy-engine-errors": "^1.0.1",
     "proxy-engine-helpers": "^1.0.1",
@@ -29,9 +30,9 @@
     "shortid": "^2.2.6",
     "sqlite3": "^3.1.4",
     "striptags": "^3.0.1",
-    "trailpack": "v2-latest",
+    "trailpack": "^2.0.0",
     "trailpack-proxy-cart-countries": "^0.0.3",
-    "trailpack-proxy-generics": "^0.0.21"
+    "trailpack-proxy-generics": "^0.0.22"
   },
   "devDependencies": {
     "eslint": "^3.0.0",
