--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trailpack-proxy-cart",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "Cart - Trailpack for Proxy Engine",
   "homepage": "https://cali-style.com",
   "author": {
@@ -25,6 +25,7 @@
     "multer": "^1.2.1",
     "proxy-engine-errors": "^1.0.1",
     "proxy-engine-helpers": "^1.0.1",
+    "proxy-generics-render": "0.0.1",
     "remove-markdown": "^0.1.0",
     "sharp": "^0.17.0",
     "shortid": "^2.2.6",
