--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trailpack-proxy-cart",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "description": "Cart - Trailpack for Proxy Engine",
   "homepage": "https://cali-style.com",
   "author": {
@@ -23,7 +23,7 @@
     "multer": "^1.2.1",
     "proxy-engine-errors": "^1.0.1",
     "proxy-engine-helpers": "^1.0.1",
-    "proxy-generics-render": "0.0.1",
+    "proxy-generics-render": "^0.0.1",
     "remove-markdown": "^0.1.0",
     "sharp": "^0.17.2",
     "shortid": "^2.2.8",
