Check for Cart, Check for Customer on checkout

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trailpack-proxy-cart",
-  "version": "0.0.35",
+  "version": "0.0.36",
   "description": "Cart - Trailpack for Proxy Engine",
   "homepage": "https://cali-style.com",
   "author": {
@@ -41,13 +41,14 @@
     "express": "^4.15.2",
     "lodash": "^4.11.1",
     "mocha": "^2.4.5",
+    "passport-local": "^1.0.0",
     "sails-disk": "^0.10.10",
     "smokesignals": "^2.0.0",
     "supertest": "^2.0.1",
     "trailpack-express": "^2.0.3",
     "trailpack-proxy-engine": "^0.0.10",
-    "trailpack-sequelize": "^2.0.0",
     "trailpack-router": "^2.0.0",
+    "trailpack-sequelize": "^2.0.0",
     "trails": "^2.0.0"
   },
   "scripts": {
