--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trailpack-proxy-cart",
-  "version": "0.0.132",
+  "version": "0.0.133",
   "description": "Cart - Trailpack for Proxy Engine",
   "homepage": "https://cali-style.com",
   "author": {
@@ -27,6 +27,7 @@
     "proxy-engine-helpers": "^1.0.4",
     "proxy-generics-render": "^0.0.3",
     "remove-markdown": "^0.1.0",
+    "sequelize": "^3.30.4",
     "sharp": "^0.17.2",
     "shortid": "^2.2.8",
     "sqlite3": "^3.1.4",
@@ -35,7 +36,7 @@
     "trailpack-proxy-cart-countries": "^0.0.4",
     "trailpack-proxy-generics": "^0.0.34",
     "trailpack-proxy-passport": "^0.0.10",
-    "trailpack-proxy-permissions": "^0.0.33"
+    "trailpack-proxy-permissions": "^0.0.34"
   },
   "devDependencies": {
     "eslint": "^3.17.1",
