--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trailpack-proxy-cart",
-  "version": "0.1.13",
+  "version": "0.1.14",
   "description": "Cart - Trailpack for Proxy Engine",
   "homepage": "https://cali-style.com",
   "author": {
@@ -28,7 +28,7 @@
     "proxy-generics-render": "^0.0.3",
     "remove-markdown": "^0.1.0",
     "sequelize": "^3.30.4",
-    "sharp": "^0.17.2",
+    "sharp": "0.17.2",
     "shortid": "^2.2.8",
     "sqlite3": "^3.1.4",
     "striptags": "^3.0.1",
