--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "proxy-generics-render": "^0.0.3",
     "remove-markdown": "^0.1.0",
     "sequelize": "^4.1.0",
-    "sharp": "^0.18.1",
+    "sharp": "0.17.1",
     "shortid": "^2.2.8",
     "sqlite3": "^3.1.4",
     "striptags": "^3.0.1",
