--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trailpack-proxy-cart",
-  "version": "0.2.28",
+  "version": "0.3.0",
   "description": "Cart - Trailpack for Proxy Engine",
   "homepage": "https://cali-style.com",
   "author": {
@@ -24,9 +24,6 @@
     "moment": "^2.18.1",
     "multer": "^1.2.1",
     "pg": "^6.1.6",
-    "proxy-engine-errors": "^1.0.1",
-    "proxy-engine-helpers": "^1.0.6",
-    "proxy-generics-render": "^0.0.3",
     "remove-markdown": "^0.2.0",
     "sequelize": "^4.7.5",
     "sharp": "0.17.1",
@@ -35,15 +32,18 @@
     "striptags": "^3.0.1",
     "trailpack": "^2.0.0",
     "trailpack-proxy-cart-countries": "^0.0.5",
+    "utf8": "^2.1.2"
+  },
+  "peerDependencies": {
+    "proxy-engine-errors": "^1.0.1",
+    "proxy-engine-helpers": "^1.0.6",
+    "proxy-generics-render": "^0.0.3",
+    "trailpack-proxy-engine": "^1.0.16",
     "trailpack-proxy-email": "^1.0.0",
     "trailpack-proxy-generics": "^1.2.0",
     "trailpack-proxy-notifications": "^1.0.6",
     "trailpack-proxy-passport": "^1.0.9",
-    "trailpack-proxy-permissions": "^1.0.11",
-    "utf8": "^2.1.2"
-  },
-  "peerDependencies": {
-    "trailpack-proxy-engine": "^1.0.16"
+    "trailpack-proxy-permissions": "^1.0.11"
   },
   "devDependencies": {
     "eslint": "^3.17.1",
