--- a/package.json
+++ b/package.json
@@ -52,16 +52,17 @@
     "mocha": "^2.4.5",
     "passport-local": "^1.0.0",
     "pg": "^6.4.2",
+    "nyc": "^11.0.2",
     "sails-disk": "^0.10.10",
     "smokesignals": "^2.0.0",
     "supertest": "^2.0.1",
     "trailpack-express": "^2.0.3",
     "trailpack-router": "^2.0.0",
-    "trailpack-proxy-sequelize": "^2.0.0-beta",
+    "trailpack-proxy-sequelize": "^2.1.0",
     "trails": "^2.0.0"
   },
   "scripts": {
-    "test": "eslint --fix . && mocha"
+    "test": "eslint --fix . && nyc mocha"
   },
   "engines": {
     "node": ">= 6.0.0"
